tests/paczka2/big_fuzzy/99968344.err
Error in line 23: uqDP S585 96,74
Error in line 29: ufNa S54 74,8
Error in line 22: S77 S585 92,0
Error in line 40: ufNa S77 5,8
Error in line 45: ufNa S54 -6,5
Error in line 43: pTP5M965P S54 93,0
Error in line 41: ufNa S54 92,1
Error in line 69: 01JN03nOrT S958 94,62
Error in line 81: uqDP S958 31,4
Error in line 85: ufNa S958 -2,1
Error in line 80: 01JN03nOrT S958 207,2
Error in line 89: E9639XVsl S77 22,3
Error in line 100: E9639XVsl S77 70,0
Error in line 97: BVZcV S54 68,6
Error in line 115: ufNa S958 60,50
Error in line 106: BVZcV S585 42,0
Error in line 108: uqDP S77 68,1
Error in line 123: E9639XVsl S958 62,1
Error in line 141: S77 S54 186,0
Error in line 144: S77 S958 72,7
Error in line 136: BVZcV S77 92,8
Error in line 151: BVZcV S585 38,3
Error in line 146: S77 S77 64,3
Error in line 155: BVZcV S77 34,4
Error in line 153: uqDP S585 1,5
Error in line 162: S77 S77 24,6
Error in line 164: S77 S54 37,69
Error in line 124: pTP5M965P S585 68,9
Error in line 177: pTP5M965P S54 16,8
Error in line 163: S77 S54 10,0
Error in line 187: uqDP S54 -1,5
Error in line 188: S77 S77 142,68
Error in line 191: uqDP S54 9,59
Error in line 195: ufNa S54 185,2
Error in line 192: E9639XVsl S585 26,1
Error in line 198: uqDP S958 5,0
Error in line 210: pTP5M965P S585 24,0
Error in line 213: pTP5M965P S54 93,4
Error in line 225: ufNa S585 52,3
Error in line 233: `1JN`3nOrT S958 87,8
Error in line 239: E9639XVsl S958 70,0
Error in line 243: ufNa S585 4,2
Error in line 229: BVZcV S585 45,8
Error in line 241: pTP5M965P S77 56,2
